2006-03-31  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h: Added enum 'Audio_dir'.
	* eca-chainsetup.h (remove_audio_object_impl): Added.
	* library interface version updated to 17:0:0
	* eca-chainsetup.h: Renamed remove_audio_object_helper() to 
	remove_audio_object_proxy().
	
2006-01-27  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 16 frozen (2.4.4 release)

2005-09-01  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* midi-server.h (add_controller_trace): Added optional 3rd argument.
	* ctrl-source.h (set_initial_value): Added.

2005-08-31  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-object-factory.h (*_to_eos): Added.
	* eca-chain.cpp (chain_operator_to_string): Removed.
	* eca-chain.cpp (controller_to_string): Removed.
	* eca-chain.cpp (operator_params_to_string): Removed.
	* eca-chainsetup-parser.cpp (audioio_to_string): Removed.
        * library interface version updated to 16:0:0

2005-08-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 15 frozen (2.4.3 release)

2005-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* midi-server.h: Added MIDI_SERVER::set_schedrealtime().

2005-08-19  Pedro Lopez-Cabanillas  <pedrolc@.devtag.AUTHORS>

	* midiio-aseq.h: Added.
        * library interface version updated to 15:0:1

2005-08-07  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp (run): Added optional "batchmode"
	parameter.

2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 14 frozen (2.4.0 release)

2004-12-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h (Mix_mode_t): Added.
	* eca-chainsetup.h (set_mix_mode, mix_mode): Added.	

2004-12-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-format.h (format_string): Function signature changed;
	no longer throws an exception.
	* sample-specs.h: SAMPLE_SPECS::is_system_littleendian removed as
	obsolete.
	* eca-chainsetup.cpp (is_valid_for_connection): Function signature 